--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ h2 {
 
 h3 {
 	font-size: 16px;
+	margin-left: 5px;
 }
 
 .main_data_container {
@@ -130,6 +131,12 @@ h3 {
 	margin-bottom: 60px;
 	padding-left: 30px;
 	font-size: 16px;
+}
+
+.title_container {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 }
 
 .experience_item,
@@ -164,4 +171,56 @@ h3 {
 .loaded {
 	opacity: 1;
     transform: translateY(0) scale(1);
+}
+
+/*--------------------------Media requests---------------------------*/
+
+@media screen and (max-width: 700px)
+{
+	.container
+	{
+		position: unset;
+	}
+	
+    .sidebar_container
+    {
+        position: unset;
+		width: 100%;
+		text-align: center;
+		min-height: 800px;
+    }
+	
+	.profile_container
+	{
+		padding-bottom: 0px;
+	}
+	
+	.language_container
+	{
+		padding-top: 30px;
+	}
+
+    .main_data_container
+	{
+		padding: 40px 30px 40px 25px;
+	}
+	
+	.experience_container, 
+	.education_container, 
+	.tools_container, 
+	.interests_container 
+	{
+		margin-bottom: unset;
+	}
+	
+	.date
+	{
+		float: unset;
+		padding-left: 0;
+	}
+	
+	h2
+	{
+		padding: 30px;
+	}
 }
